# ellar-django-module

./: Makefile  README.md  mypy.ini  pyproject.toml  requirements-tests.txt
.github/workflows/: publish.yml  test.yml  test_full.yml
ellar_django/: __init__.py  commands.py  middleware.py  module.py
sample/ellar-and-django-orm/: manage.py  requirements.txt
sample/ellar-and-django-orm/ellar_and_django_orm/: root_module.py  server.py
sample/ellar-and-django-orm/ellar_and_django_orm/apps/event/: controllers.py  schemas.py
sample/ellar-and-django-orm/ellar_and_django_orm/interfaces/: dto.py  events_repository.py
sample/ellar-and-django-orm/ellar_and_django_orm/services/: event_repository.py
sample/ellar-and-django-orm/ellar_and_django_orm/wsgi_django/: settings.py
sample/ellar-and-django-orm/ellar_and_django_orm/wsgi_django/db_models/: apps.py
sample/ellar-and-django-orm/ellar_and_django_orm/wsgi_django/db_models/migrations/: 0001_initial.py
tests/: conftest.py  test_admin_works.py  test_django_commands.py  test_event_controller.py
tests/example_app/: root_module.py
tests/example_app/apps/event/: controllers.py  module.py  routers.py  schemas.py  services.py
tests/example_app/interfaces/: events_repository.py
tests/example_app/services/: event_repository.py
tests/example_app/wsgi_django/: settings.py  urls.py
tests/example_app/wsgi_django/db_models/models/: event.py
